# firmware

./: .gitignore  .gitmodules  CNAME  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: sphinx-docs.yml
docs/: Makefile  README.md  conf.py  getting_started.rst  imu.rst  index.rst  legs_example.rst  modules.rst  motor_model.rst  robot_controller.rst  scripts.rst  testing_debugging.rst
firmware/: a.py  b.py  c.py  can.py  d.py  requirements-dev.txt  requirements.txt  task.py
firmware/app/: client.py  server.py
firmware/bionic_motors/: commands.py  driver.py  model.py  motors.py  responses.py  utils.py
firmware/cpp/: CMakeLists.txt
firmware/cpp/can/: CMakeLists.txt  can.cpp  can.h  can_dfs.h  test.py  test_build.py
firmware/cpp/can_new/: CMakeLists.txt  mcp2515_can.cpp  mcp2515_can.h  mcp2515_can_dfs.h  mcp_can.cpp  mcp_can.h
firmware/cpp/can_new/ref/: example.cpp  mcp2515_can.cpp  mcp2515_can.h  mcp2515_can_dfs.h  mcp_can.cpp  mcp_can.h
firmware/cpp/can_ref/: can.cpp  can.h  mcp_can.cpp  mcp_can.h  mcp_can_dfs.h
firmware/cpp/imu/: i2c-dev.h  imu.cpp  imu.h  imu.pyi
firmware/cpp/madgwick/: CMakeLists.txt  madgMath.h  madgwick.cpp  madgwick.h  offset.cpp  offset.h
firmware/gui/: __init__.py  interact.py
firmware/imu/: imu.py
firmware/lcd/: demo.py  gc9a01.py
firmware/lcds/: README.md  boot_out.txt  circuitrunner.py  main.py
firmware/motor_utils/: motor_factory.py  motor_utils.py
firmware/motors/: bionic_motors.py  bionic_motors_commands.py  bionic_motors_driver.py  bionic_motors_model.py  bionic_motors_responses.py  bionic_motors_utils.py  model.py  motor.py
firmware/motors_sync/: run.py
firmware/overlays/: README.md  enable-spi.dts
firmware/robot/: config.yaml  model.py  robot.py  (+3 more)
scripts/: freeze.py  freeze.sh  read_error.py  reset.py  show_imu.py  single_motor.py  status.sh  tick.py  wave.py  write_current_positions_as_zero.py
tests/: conftest.py  sound_test.py
(+68 files in other folders)
